# PortfolioAnalyser

./: .replit  app.py  pyproject.toml  replit.md  sample_portfolio.csv  test_portfolio.csv
.streamlit/: config.toml
api/: __init__.py  dependencies.py  main.py
api/models/: schemas.py
api/routers/: __init__.py  advanced_metrics.py  auth.py  portfolio.py  rebalancing.py  recommendations.py  websocket.py
api/services/: auth_service.py
attached_assets/: Pasted--Layer-1-Core-Structural-Diagnostics-Foundation-These-a_1769361306541.txt  Pasted-Disclaimer-Investment-Advice-Portfolio-Rebalancing-The-_1769407085804.txt  Pasted-Report-Structure-Content-The-Analyzer-produces-a-modula_1769534360178.txt  SAMPLE_FORMAT_-_NEETU_1770295827251.xlsx  SAMPLE_FORMAT_DHARMENDRA_SIR_SHARES_LIST_1770276759777.xlsx  SAMPLE_FORMAT_PRASENJIT_CHAUDHARY_-_Sheet2_1770276563886.csv
components/: advanced_metrics_tab.py  benchmark_comparison.py  customer_profile.py  dashboard.py  historical_performance.py  homepage.py  methodology.py  portfolio_summary.py  quantamental_analysis.py  rebalancing.py  recommendations.py  sector_analysis.py  stock_performance.py
utils/: advanced_metrics.py  ai_assistant.py  alpha_vantage.py  auth.py  corporate_actions.py  data_fetcher.py  database.py  file_parser.py  page_explanations.py  pdf_generator.py  pdf_generator_backup.py  portfolio_analyzer.py  razorpay_client.py  recommendation_engine.py  truedata_client.py  twelve_data.py  zerodha_auth.py
